--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="../FluentFlow-landingPage/index.css">
 </head>
 <body>
+  
     <header>
-        <!--<h1><b>FLUENT FLOW</b></h1>-->
         <nav>
             <ul>
-                <li><a href="#intro">Translate Text</a></li>
-                <li><a href="#features">Translate Image</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="/translate">Translate Text</a></li>
+                <li><a href="/ocr">Translate Image</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -24,26 +24,7 @@
         <p> An AI-powered platform for real-time translation</p></div>
         <div class="translator"></div>
      </div>
-     </section>
-
-      <!--<section id="second-section">
-        <div id="part1">
-       <div class="text-area"></div>
-       <div class="text1"> Welcome to FluentFlow, your go-to text translation tool. Easily translate text with just a few clicks. Whether you're a student, 
-        traveler, or business professional, 
-        FluentFlow is your gateway to seamless communication in multiple languages. Try it out and experience the power of FluentFlow today!</div>
-        </div>
-      </section>
-    
-      <section id="second-section2">
-        <div id="part2">
-        <div class="image-area"></div>
-        <div class="text2">FluentFlow goes beyond text translation. With our innovative OCR (Optical Character Recognition) technology, 
-          FluentFlow can translate text from images into your desired language. 
-          Simply upload an image containing text, and FluentFlow will accurately convert it into the language of your choice.
-           Experience the convenience of image translation with FluentFlow!</div>
-        </div>
-        </section>-->
+    </section>
       
         <section id="second-section">
           <div class="text">
