--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <section id="first-section">
         <div class="star">
         <div class="diag"> <h1><b>FLUENT FLOW</b></h1>
-        <p> An AI-powered platform for real-time translation</p></div>
+        <p> FluentFlow: Bridging the gap between languages with a single flow</p></div>
         <div class="translator"></div>
      </div>
     </section>
