--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="/translate">Translate Text</a></li>
-                <li><a href="/ocr">Translate Image</a></li>
+                <li><a href="http://adewale.tech/ocr">Translate Image</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </nav>
