--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/translate">Translate Text</a></li>
+                <li><a href="http://adewale.tech/translate">Translate Text</a></li>
                 <li><a href="http://adewale.tech/ocr">Translate Image</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
