--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="http://adewale.tech/translate">Translate Text</a></li>
                 <li><a href="http://adewale.tech/ocr">Translate Image</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="http://adewale.tech/about">About</a></li>
             </ul>
         </nav>
     </header>
