--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </section>
       
       <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Salami Oluwatosin</p>
     </footer>
 </body>
 </html>
